--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -6,7 +6,7 @@
       left: 0;
       right: 0;
       height: 80px;
-      /* background-color: #fff; */
+      background-color: rgba(255, 255, 255, 0.372);
       color: #008000;
       overflow: hidden;
       backdrop-filter: blur(20px);
@@ -42,12 +42,13 @@
       border: none
     }
     .Navlink{
-        color: rgb(69, 69, 69);
+        color: rgb(44, 44, 44);
         margin: 0 1rem;
-      transition: .5s;
+      font-weight: 600;
+
+      /* transition: .5s; */
 
     }
     .Navlink:hover{
       color: #000;
-      font-weight: 600;
   }
