--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -7,17 +7,21 @@
   align-items: center;
   position: relative;
 }
-.mapImage {
+.Heroimage {
   width: 100%;
+
   /* opacity: 0.8; */
   
+}
+.image{
+  object-fit: cover;
 }
 .overlay{
   position: absolute;
 top: 0;
 right: 0;
 left: 0;
-bottom: 0;background-color:  rgba(0, 0, 0, 0.357);
+bottom: 0;background-color:  rgba(0, 0, 0, 0.468);
 }
 .HeroContent {
   position: absolute;
