--- a/styles/apply.module.css
+++ b/styles/apply.module.css
@@ -25,6 +25,12 @@
 }
 .textR {
   text-align: end;
+  font-family: urduFonts;
+  color: #124378;
+}
+.textL{
+  color: rgb(7, 138, 49);
+
 }
 .card{
       width: 80%;
@@ -32,8 +38,8 @@
 .bg1 {
   position: absolute;
   bottom: 0;
-  right: 0;
-  width: 40%;
+  right: 10%;
+  width: 35%;
   
 }
 
@@ -50,26 +56,30 @@
 .btn:hover{
       background-color: rgb(16, 185, 69);
 }
-
-
+.checkboxWrap{
+  display: grid;
+  gap: 1rem;
+  /* grid-template-columns: auto auto; */
+}
+.Label{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
 .checkbox{
       border: #aaa 1px solid;
-      padding: .5rem;
-      margin: .5rem 0;
+      padding: 1rem 0;
       border-radius: 1rem;
-      display: flex;
+      font-size: 1.5rem;
       cursor: pointer;
+      background-color: rgb(16, 185, 69, .8);
+
 }
-.checkbox>h1{
-      font-size: large;
-      margin: 0.1;
-      padding: 0;
-}
+
 .checkbox:hover{
-      background-color: #fff;
-}
-.checkbox.focus{
-      background-color: #fff;
+box-shadow: 0px 2px 15px rgb(16, 185, 69, .8);
+  
 }
 
 .fileInput{
@@ -125,6 +135,8 @@
   .wrapApply {
     width: 100vw;
   }
+
+  
 }
 
 
