--- a/styles/client.module.css
+++ b/styles/client.module.css
@@ -16,6 +16,7 @@
     .clientsLogo{
       display: flex;
       justify-content: space-between;
+      align-items: stretch;
     }
    .img {
       /* width: 50%; */
